--- a/smoke_test.yaml
+++ b/smoke_test.yaml
@@ -3,184 +3,189 @@ globals:
   token: token123
   
 contracts:
-- name: httpbin
-  path: "/"
-  method: GET
+  - name: example
+    path: /users
+    method: GET
 
-  http_code_is: 200
+    http_code_is: 200
+# - name: httpbin
+#   path: "/"
+#   method: GET
 
-- name: httpbin_status_code_check
-  path: "/status/418"
-  method: GET
+#   http_code_is: 200
 
-  http_code_is: 418
+# - name: httpbin_status_code_check
+#   path: "/status/418"
+#   method: GET
 
-- name: httpbin_get_body
-  path: "/get?foo=hello!"
-  method: GET
+#   http_code_is: 418
 
-  response_body_contains: hello
+# - name: httpbin_get_body
+#   path: "/get?foo=hello!"
+#   method: GET
 
-- name: httpbin_get_body_with_global_variable
-  path: "/get?foo=::token::&bar=1"
-  method: GET
+#   response_body_contains: hello
 
-  response_body_contains: token123
+# - name: httpbin_get_body_with_global_variable
+#   path: "/get?foo=::token::&bar=1"
+#   method: GET
 
-- name: httpbin_get_body_with_local_variable
-  path: "/get?foo=::token::&bar=1"
-  method: GET
-  locals:
-    token: token456
+#   response_body_contains: token123
 
-  response_body_contains: token456
+# - name: httpbin_get_body_with_local_variable
+#   path: "/get?foo=::token::&bar=1"
+#   method: GET
+#   locals:
+#     token: token456
 
-- name: httpbin_get_body_with_environment_variable
-  path: "/get?foo=::envtoken::&bar=1"
-  method: GET
+#   response_body_contains: token456
 
-  response_body_contains: token235
+# - name: httpbin_get_body_with_environment_variable
+#   path: "/get?foo=::envtoken::&bar=1"
+#   method: GET
 
-- name: httpbin_post_body
-  path: "/post"
-  method: POST
-  body: hello!
+#   response_body_contains: token235
+
+# - name: httpbin_post_body
+#   path: "/post"
+#   method: POST
+#   body: hello!
   
-  response_body_contains: hello
+#   response_body_contains: hello
 
-- name: httpbin_post_body_with_global_variable
-  path: "/post"
-  method: POST
-  body: 'this is a test ::token::'
+# - name: httpbin_post_body_with_global_variable
+#   path: "/post"
+#   method: POST
+#   body: 'this is a test ::token::'
 
-  response_body_contains: token123
+#   response_body_contains: token123
 
-- name: httpbin_post_body_with_local_variable
-  path: "/post"
-  method: POST
-  body: 'this is a test ::token::'
-  locals:
-    token: token456
+# - name: httpbin_post_body_with_local_variable
+#   path: "/post"
+#   method: POST
+#   body: 'this is a test ::token::'
+#   locals:
+#     token: token456
 
-  response_body_contains: token456
+#   response_body_contains: token456
 
-- name: httpbin_post_body_with_environment_variable
-  path: "/post"
-  method: POST
-  body: 'this is a test ::envtoken::'
+# - name: httpbin_post_body_with_environment_variable
+#   path: "/post"
+#   method: POST
+#   body: 'this is a test ::envtoken::'
 
-  response_body_contains: token235
+#   response_body_contains: token235
 
-- name: httpbin_headers
-  path: "/headers"
-  method: GET
-  headers:
-    test_header: test_value
+# - name: httpbin_headers
+#   path: "/headers"
+#   method: GET
+#   headers:
+#     test_header: test_value
 
-  response_body_contains: test_value
+#   response_body_contains: test_value
 
-- name: httpbin_headers_with_global_variable
-  path: "/headers"
-  method: GET
-  headers:
-    test_header: "::token::"
+# - name: httpbin_headers_with_global_variable
+#   path: "/headers"
+#   method: GET
+#   headers:
+#     test_header: "::token::"
 
-  response_body_contains: token123
+#   response_body_contains: token123
 
-- name: httpbin_headers_with_local_variable
-  path: "/headers"
-  method: GET
-  headers:
-    test_header: "::token::"
-  locals:
-    token: token456
+# - name: httpbin_headers_with_local_variable
+#   path: "/headers"
+#   method: GET
+#   headers:
+#     test_header: "::token::"
+#   locals:
+#     token: token456
 
-  response_body_contains: token456
+#   response_body_contains: token456
 
-- name: httpbin_headers_with_environment_variable
-  path: "/headers"
-  method: GET
-  headers:
-    test_header: "::envtoken::"
-  response_body_contains: token235
+# - name: httpbin_headers_with_environment_variable
+#   path: "/headers"
+#   method: GET
+#   headers:
+#     test_header: "::envtoken::"
+#   response_body_contains: token235
 
-- name: httpbin_redirect
-  path: "/redirect/1"
-  method: GET
+# - name: httpbin_redirect
+#   path: "/redirect/1"
+#   method: GET
 
-  http_code_is: 302
+#   http_code_is: 302
 
-- name: httpbin_set_output_variable
-  path: "/get?params=foo"
-  method: GET
-  outputs:
-    test_output_variable: "JSON.args.params"
+# - name: httpbin_set_output_variable
+#   path: "/get?params=foo"
+#   method: GET
+#   outputs:
+#     test_output_variable: "JSON.args.params"
 
-  http_code_is: 200
+#   http_code_is: 200
 
-- name: httpbin_verify_output_variable
-  path: "/get?params=::test_output_variable::"
-  method: GET
+# - name: httpbin_verify_output_variable
+#   path: "/get?params=::test_output_variable::"
+#   method: GET
 
-  http_code_is: 200
-  response_body_contains: "foo"
+#   http_code_is: 200
+#   response_body_contains: "foo"
 
-- name: httpbin_set_array_output_variable
-  path: "/get?params=foo&params=bar"
-  method: GET
-  outputs:
-    test_output_variable: "JSON.args.params[1]"
+# - name: httpbin_set_array_output_variable
+#   path: "/get?params=foo&params=bar"
+#   method: GET
+#   outputs:
+#     test_output_variable: "JSON.args.params[1]"
 
-- name: httpbin_verify_output_array_variable
-  path: "/get?params=::test_output_variable::"
-  method: GET
+# - name: httpbin_verify_output_array_variable
+#   path: "/get?params=::test_output_variable::"
+#   method: GET
 
-  http_code_is: 200
-  response_body_contains: "bar"
+#   http_code_is: 200
+#   response_body_contains: "bar"
 
-- name: httpbin_get_body_regexp
-  path: "/get?foo=12345!"
-  method: GET
+# - name: httpbin_get_body_regexp
+#   path: "/get?foo=12345!"
+#   method: GET
 
-  response_body_contains: "r/[1-5]{5}"
+#   response_body_contains: "r/[1-5]{5}"
 
-- name: httpbin_get_body_regexp_not_compiling
-  path: "/get?foo=r/[1-a{5}!"
-  method: GET
+# - name: httpbin_get_body_regexp_not_compiling
+#   path: "/get?foo=r/[1-a{5}!"
+#   method: GET
 
-  response_body_contains: "r/[1-a{5}"
+#   response_body_contains: "r/[1-a{5}"
 
-- name: httpbin_verify_response_header
-  path: "/response-headers?My-Header=found"
-  method: GET
+# - name: httpbin_verify_response_header
+#   path: "/response-headers?My-Header=found"
+#   method: GET
 
-  response_headers_contain:
-    My-Header: "found"
+#   response_headers_contain:
+#     My-Header: "found"
 
-- name: httpbin_verify_many_response_header
-  path: "/response-headers?My-Header=found&My-Header2=notImportant&My-Header3=12345!"
-  method: GET
+# - name: httpbin_verify_many_response_header
+#   path: "/response-headers?My-Header=found&My-Header2=notImportant&My-Header3=12345!"
+#   method: GET
 
-  response_headers_contain:
-    My-Header: "found"
-    My-Header2: ""
-    My-Header3: "r/[1-5]{5}"
+#   response_headers_contain:
+#     My-Header: "found"
+#     My-Header2: ""
+#     My-Header3: "r/[1-5]{5}"
 
-- name: httpbin_get_body_multiple
-  path: "/get?foo=hello!"
-  method: GET
+# - name: httpbin_get_body_multiple
+#   path: "/get?foo=hello!"
+#   method: GET
 
-  response_body_contains: hello
-  response_contains:
-    - foo
-    - !
+#   response_body_contains: hello
+#   response_contains:
+#     - foo
+#     - !
 
-- name: httpbin_get_response_multiple
-  path: "/get?foo=hello!"
-  method: GET
+# - name: httpbin_get_response_multiple
+#   path: "/get?foo=hello!"
+#   method: GET
 
-  response_contains:
-    - hello
-    - foo
-    - !
+#   response_contains:
+#     - hello
+#     - foo
+#     - !
 
